chore: engine-version

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/naszifnaaz/sound-lab-backend.git"
   },
+  "engines": {
+    "node": ">=14.20.1"
+  },
   "author": "naszifnaaz",
   "license": "ISC",
   "dependencies": {
